test object interactions

--- a/learning python/test_object_interaction.ipynb
+++ b/learning python/test_object_interaction.ipynb
@@ -27,6 +27,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1] [1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x=[]):\n",
+    "    x.append(1)\n",
+    "    return x\n",
+    "\n",
+    "print(f(),f())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
