--- a/classic/knapsack_01.ipynb
+++ b/classic/knapsack_01.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np # For random numbers"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "def items(n):\n",
     "    out = []\n",
     "    for i in range(n):\n",
-    "        out.append((np.random.randint(10),np.random.randint(100)))\n",
+    "        out.append((np.random.randint(10), np.random.randint(100)))\n",
     "    return out\n",
     "\n",
     "items(5)"
@@ -62,9 +62,9 @@
     "def knap(items, maxweight, i=0):\n",
     "    \"\"\"Receives a list, first valid item to consider, and max weight. \n",
     "    Returns an array of items with max price.\"\"\"\n",
-    "    if i==len(items):                               # Induction basis: if out of bounds, 0 price, no items\n",
+    "    if i==len(items):                               # Induction basis: if out of bounds: 0 price, no items\n",
     "        return (0,[])\n",
-    "    this = items[i]\n",
+    "    this = items[i]                                 # Do we include this one?\n",
     "    if (i,maxweight) in mem:                        # The state of search is defined by 2 vars\n",
     "        return mem[(i,maxweight)]\n",
     "    if this[0]>maxweight:\n",
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
