--- a/classic/lifo_stack.ipynb
+++ b/classic/lifo_stack.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stack\n",
+    "# Stack with resizing\n",
     "\n",
     "Trying to make a LIFO stack, which is a bit silly in Python ;)"
    ]
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
