--- a/learning python/ch10 lists.ipynb
+++ b/learning python/ch10 lists.ipynb
@@ -262,6 +262,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 128 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo():\n",
+    "    for i in range(1000):\n",
+    "        a = list(range(1000))\n",
+    "        for j in range(len(a)-2):\n",
+    "            del a[1]\n",
+    "\n",
+    "%time foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 177 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo():\n",
+    "    for i in range(1000):\n",
+    "        a = list(range(1000))\n",
+    "        for j in range(len(a)-2):\n",
+    "            a.pop(1)\n",
+    "\n",
+    "%time foo() # So it seems that pop(i) is about 40% slower than del a[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -560,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
