--- a/lil_problems/anagrams_finder.ipynb
+++ b/lil_problems/anagrams_finder.ipynb
@@ -56,47 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
+    "    \"\"\"Calculate letter frequencies for each substring, and compare dicts\"\"\"\n",
     "    def findAnagrams(self, s, p):\n",
     "        if len(p)>len(s):\n",
     "            return []\n",
-    "        t = {}\n",
+    "        d = {k:0 for k in s}\n",
+    "        t = {k:0 for k in s}\n",
     "        for c in p:\n",
     "            t[c] = t.get(c,0)+1\n",
-    "        d = {k:0 for k in t.keys()}\n",
     "        out = []\n",
     "        \n",
     "        for i in range(len(p)):\n",
     "            if s[i] in d:\n",
     "                d[s[i]] += 1\n",
     "        for i in range(len(s)-len(p)+1):\n",
-    "            # print(i,d)\n",
+    "            #print(i,d,t,d==t)\n",
     "            if i>0:\n",
     "                if s[i-1] in d:\n",
     "                    d[s[i-1]] -= 1\n",
     "                if s[i+len(p)-1] in d:\n",
     "                    d[s[i+len(p)-1]] += 1\n",
-    "            if d==t: # all([d[c]==t[c] for c in t.keys()]): - when I wrote that, I didn't realize you can compare dicts\n",
+    "            if d==t: # If dicts are the same\n",
     "                out.append(i)\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 6]"
+       "[0, 9]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,7 @@
    "source": [
     "# test\n",
     "S = Solution()\n",
-    "S.findAnagrams(\"cbaebabacd\",\"abc\")\n",
+    "S.findAnagrams(\"cbaebabatbcad\",\"abc\")\n",
     "#S.findAnagrams(\"baa\",\"aa\")"
    ]
   }
@@ -125,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
