basic python tests

--- a/classic/knapsack_01.ipynb
+++ b/classic/knapsack_01.ipynb
@@ -43,6 +43,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General idea\n",
+    "\n",
+    "* The general idea is that we are using dynamic programming. At each step we can either include an element, or to skip it, and then to solve the same problem with remaining elements.\n",
+    "* On top of that, we need to compare with the maximal weight, and skip those elements that bring us over.\n",
+    "* And we need to keep track of the current best solution.\n",
+    "* Now, to make it fast, we use memoization. In this case however the space of states is 2D: how far in we are, along the line, and what is the weight-to-date. So we form a tuple to describe the current state, and memoize based on this tuple."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
