--- a/learning python/test_round.ipynb
+++ b/learning python/test_round.ipynb
@@ -53,6 +53,29 @@
    "source": [
     "Both round to even, huh :)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "-3\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(2.6))\n",
+    "print(int(2.6))\n",
+    "print(round(-2.6))\n",
+    "print(int(-2.6))"
+   ]
   }
  ],
  "metadata": {
@@ -71,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
