--- a/learning python/sets.ipynb
+++ b/learning python/sets.ipynb
@@ -241,6 +241,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1,2,3}\n",
+    "print(sum(a))\n",
+    "b = [1,2,3]\n",
+    "print(sum(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -359,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
