--- a/alphabets/text_replacer.ipynb
+++ b/alphabets/text_replacer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = io.open(\"alice_in_russian.md\", mode=\"r\", encoding=\"utf-8\")\n",
+    "f = io.open(\"alice_in_runic.md\", mode=\"r\", encoding=\"utf-8\")\n",
     "myString = f.read()\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +75,13 @@
     "f2.write(os)\n",
     "f2.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
