--- a/lil_problems/widest_ramp.ipynb
+++ b/lil_problems/widest_ramp.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Version with O(n2) and memezation on top. It works, but still timeouts on Leetcod.\n",
+    "# Version with O(n2) and memoization on top. It works, but still timeouts on Leetcode.\n",
     "\n",
     "class Solution1:\n",
     "    class Solver:\n",
@@ -84,7 +84,7 @@
     "            self.mem = [] # An array of tuples x,y - that is, (i,A[i])\n",
     "            \n",
     "        def furthest_ramp(self,mem,i,y):\n",
-    "            \"\"\"Find the furthest ramp from point (i,y) to the ramp.\"\"\"\n",
+    "            \"\"\"Find the furthest ramp from point (i,y) to the right.\"\"\"\n",
     "            l = 0\n",
     "            r = len(mem)-1\n",
     "            while r-l>1:\n",
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
