more solutions for the ranking problem

--- a/lil_problems/ranking.ipynb
+++ b/lil_problems/ranking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,130 @@
     "\n",
     "rank(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 0, 1, 5, 3, 4]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alternative keysort (should be faster)\n",
+    "keysort = lambda x: [i for _,i in sorted([(x[i],i) for i in range(len(x))])]\n",
+    "keysort(keysort(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 0, 1, 5, 3, 4]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same without double sort\n",
+    "t = [i for _,i in sorted([(a[i],i) for i in range(len(a))])]\n",
+    "[t[i] for i in t]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 0, 1, 5, 3, 4]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same, but with maps\n",
+    "t = list(map(lambda x:x[1],sorted(zip(a,range(len(a))))))\n",
+    "[t[i] for i in t]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sorting one list by keys from the other\n",
+    "\n",
+    "Now a test for a related, but simpler problem. Two lists, we need to sort one according to the sequence in the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total times, for LC and MAP: 7.173242568969727 6.424499034881592\n",
+      "Difference: 10%\n"
+     ]
+    }
+   ],
+   "source": [
+    "ntries = 10000\n",
+    "nelements = 1000\n",
+    "time1 = time2 = 0\n",
+    "item_list = list(range(nelements))\n",
+    "for i in range(ntries):\n",
+    "    value_list = np.random.randint(size=nelements,low=0,high=1000)\n",
+    "    tic = time.time()\n",
+    "    out1 = [item_list[j] for _,j in sorted([(value_list[i],i) for i in range(len(value_list))])]\n",
+    "    time1 += time.time()-tic\n",
+    "    tic = time.time()\n",
+    "    out2 = list(map(lambda x: x[1], sorted(zip(value_list, item_list))))\n",
+    "    time2 += time.time()-tic\n",
+    "    assert out1==out2\n",
+    "    \n",
+    "print('Total times, for LC and MAP:', time1, time2)\n",
+    "print(f'Difference: {int((time1-time2)/time1*100)}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, an interesting finding. `list(map(lambda`-based solution is consitently about 10% faster than a list-comprehension-based one!"
+   ]
   }
  ],
  "metadata": {
@@ -147,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
