--- a/classic/hash_tables.ipynb
+++ b/classic/hash_tables.ipynb
@@ -14,6 +14,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 158, 60, 218, 120, 23, 181, 83, 241, 143, 46, 204, 106, 8, 167, 69, 227, 129, 31, 190, 92, 250, 152, 54, 213, 115, 17, 175, 78, 236, 138, 40, 198, 101, 3, 161, 63, 222, 124, 26, 184, 86, 245, 147, 49, 207, 109, 12, 170, 72, 230, 133, 35, 193, 95, 253, 156, 58, 216, 118, 21, 179, 81, 239, 141, 44, 202, 104, 6, 164, 67, 225, 127, 29, 188, 90, 248, 150, 52, 211, 113, 15, 173, 75, 234, 136, 38, 196, 99, 1, 159, 61, 219, 122, 24, 182, 84, 243, 145, 47]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hash functions\n",
+    "\n",
+    "def multiply_shift(x):\n",
+    "    WORDLENGTH = 32\n",
+    "    TARGET_SIZE = 8\n",
+    "    return (2654435769*x & (2**WORDLENGTH-1)) >> (WORDLENGTH-TARGET_SIZE)\n",
+    "\n",
+    "print([multiply_shift(i) for i in range(100)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -267,16 +291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n",
-      "[3, 101]\n"
+      "[2, 3, 4, 5, 6, 10, 12, 15, 20, 30]\n",
+      "[3, 11923]\n"
      ]
     }
    ],
@@ -285,9 +308,8 @@
     "    \"\"\"A tool to find prime numbers.\"\"\"\n",
     "    return [i for i in range(2,k-1) if k % i==0]\n",
     "\n",
-    "print(divisors(127))\n",
-    "print(divisors(37))\n",
-    "print(divisors(70+77+78*2))"
+    "print(divisors(60))\n",
+    "print(divisors(35769))"
    ]
   }
  ],
@@ -307,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
