some dynamic programming problems

--- a/lil_problems/lil_tests_01.ipynb
+++ b/lil_problems/lil_tests_01.ipynb
@@ -129,6 +129,87 @@
     "for i in range(13):\n",
     "    print(i,number_ways([1,2,3],i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Priority queue from scratch in GoogleDocs.\n",
+    "\"\"\"\n",
+    "\n",
+    "class PQ:\n",
+    "    def __init__(self):\n",
+    "        self.x = [0]\n",
+    "\n",
+    "    def n(self):\n",
+    "        \"\"\"Current array size (aka heap size + 1).\"\"\"\n",
+    "        return len(self.x) # One option\n",
+    "\n",
+    "    def trim(self):\n",
+    "        \"\"\"Remove last element.\"\"\"\n",
+    "        self.x = self.x[:-1]\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if len(self.x)<2: return None\n",
+    "        out = self.x[1]\n",
+    "        self.x[1] = self.x[self.n()-1]\n",
+    "        self.trim()\n",
+    "        self.sink(1)\n",
+    "        return out\n",
+    "\n",
+    "    def append(self,val):\n",
+    "        self.x.append(val)\n",
+    "\n",
+    "    def add(self,val):\n",
+    "        self.append(val)\n",
+    "        self.swim(self.n()-1)\n",
+    "\n",
+    "    def swap(self,i,j):\n",
+    "        self.x[i],self.x[j] = self.x[j],self.x[i]\n",
+    "\n",
+    "    def sink(self,k):\n",
+    "        if 2*k>=self.n(): # No kids\n",
+    "            return # Do nothing, we're at the bottom\n",
+    "        if self.x[2*k]>self.x[k]:\n",
+    "            self.swap(k,2*k)\n",
+    "            self.sink(2*k)\n",
+    "        if 2*k+1<self.n(): # Right kid exists\n",
+    "            if self.x[2*k+1]>self.x[k]:\n",
+    "                self.swap(k,2*k+1)\n",
+    "                self.sink(2*k+1)\n",
+    "        return\n",
+    "\n",
+    "    def swim(self,k):\n",
+    "        if k==1: return # root\n",
+    "        if self.x[k//2]<self.x[k]:\n",
+    "            self.swap(k//2,k)\n",
+    "            self.swim(k//2)\n",
+    "\n",
+    "# tests\n",
+    "pq = PQ()\n",
+    "print(pq.pop())\n",
+    "for val in [5,2,3,1,7,2]:\n",
+    "    pq.add(val)\n",
+    "while pq.n()>1:\n",
+    "    print(pq.pop())"
+   ]
   }
  ],
  "metadata": {
