--- a/lil_problems/clique_of_dividing_numbers.ipynb
+++ b/lil_problems/clique_of_dividing_numbers.ipynb
@@ -245,6 +245,9 @@
    "source": [
     "# Good no-recursion solution from another user:\n",
     "\n",
+    "# We will use the fact that once the elements are sorted, % is transitive down. \n",
+    "# If i % j == 0, then for evern k that j % k == 0, it is also true that i % k == 0.\n",
+    "\n",
     "class Solution2:\n",
     "    def largestDivisibleSubset(self, nums):\n",
     "        if not nums:                # Apparently that's a recommended way to check len(nums)==0. TIL!\n",
@@ -252,12 +255,13 @@
     "        nums.sort()                 # Note that they sort the array\n",
     "        n = len(nums)\n",
     "        dp = [(-1, 1)] * n          # dp[i] : (j : nums[i]%nums[j]==0 that achieves max(len(seq)) , the value of len(seq))\n",
+    "        # By default, each i on its own, so there's no j kinda (-1), and we have a group of only 1 element (i itself)\n",
     "        maxl = (0, 1)               # Same, but for storing current best value\n",
     "        for i in range(1, n):       # As n is now sorted, we'll go through smaller values first ...\n",
     "            for j in range(i):      # ... meaning that for j, everything is solved. (That's why no need in recursion!)\n",
     "                if nums[i] % nums[j] == 0:\n",
-    "                    if dp[i][1] < dp[j][1] + 1:      # If going with this branch (i and lower) would benefit j:\n",
-    "                        dp[i] = (j, dp[j][1] + 1)    # update j.\n",
+    "                    if dp[i][1] < dp[j][1] + 1:      # If j is more promising for i than the prev best choice:\n",
+    "                        dp[i] = (j, dp[j][1] + 1)    # update i, remembering that it's now in-group with j.\n",
     "                        if maxl[1] < dp[i][1]:       # And check if could be the best-length sequence for now.\n",
     "                            maxl = (i, dp[i][1])\n",
     "        ret = []\n",
