--- a/lil_problems/longest shared beginning.ipynb
+++ b/lil_problems/longest shared beginning.ipynb
@@ -36,7 +36,7 @@
     "        if l[i]=='':\n",
     "            return ''\n",
     "        if len(l[i])<len(ans):\n",
-    "            ans = ans[0:(len(l[i])-1)]\n",
+    "            ans = ans[0:(len(l[i])-1)] # Just progressively trim\n",
     "        k = len(ans)\n",
     "        for j in range(len(ans)):\n",
     "            if ans[j]!=l[i][j]:\n",
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
