--- a/classic/priority_queue.ipynb
+++ b/classic/priority_queue.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Priority queues\n",
+    "# Priority queue\n",
     "\n",
     "Main point: like a stack, but ordered, in the sense that we put things in randomly, but pop() them always in order, from high priority to low priority. If we put() it only once, and popped it only once, we would have just sorted the thing, but we want something to which we can add stuff as it arises, and yet still always pop() the top priority element, at all times.\n",
     "\n",
@@ -15,52 +15,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " x t t r r c a i o c o\n",
-      " x t t r r d a i o c o c\n",
-      "xttr\n",
-      " r o o i c d a c\n",
-      "rooi\n",
-      " d c c a\n",
-      "d\n",
-      "|c\n",
-      "||a\n",
-      "|c\n",
-      " z y t s r o s p r p r i l c r a a d e a h c e a c a l\n",
-      "zytssrrrr\n",
-      " p p o l h l c c e c e i a a a a a d\n",
-      "ppolliheedcccaaaaa\n",
-      "\n"
+      "[0, 'x', 't', 't', 'r', 'r', 'c', 'a', 'i', 'o', 'c', 'o']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'pq' object has no attribute 'insert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6432a774d6d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'toxic carrot'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'd'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'pq' object has no attribute 'insert'"
      ]
     }
    ],
    "source": [
+    "# Annotated version\n",
+    "\n",
     "class pq():\n",
+    "    \"\"\"Max priority queue.\"\"\"\n",
     "    def __init__(self, init=[]):\n",
-    "        self.x = ['']\n",
+    "        self.x = [0]\n",
     "        self.last = 0\n",
     "        for i in init:\n",
-    "            self.insert(i)\n",
+    "            self.add(i)\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return ' '.join(self.x)\n",
+    "        #return ' '.join(str(self.x))\n",
+    "        return str(self.x)\n",
     "    \n",
-    "    def insert(self,a):\n",
-    "        if len(a)>1:      # Shortcut, to make it handle strings\n",
-    "            for i in a:\n",
-    "                self.insert(i)\n",
-    "            return\n",
-    "        if a==' ': return # Let's ignore spaces, just to make presentation easier. Not a real part of this algo ;]\n",
+    "    def feed(self,a):\n",
+    "        \"\"\"Add more than one element at once, from either str or array.\"\"\"\n",
+    "        for i in a:\n",
+    "            self.add(i)\n",
+    "    \n",
+    "    def add(self,a):\n",
     "        self.x.append(a)\n",
     "        self.last += 1\n",
-    "        #print(self.last, self.x)\n",
-    "        self.swimup(self.last)\n",
+    "        self._swim(self.last)\n",
     "    \n",
     "    def swap(self,i,j):\n",
     "        (self.x[i] , self.x[j]) = (self.x[j] , self.x[i])\n",
@@ -72,10 +72,10 @@
     "        self.swap(1,self.last) # As we cannot have holes in the tree, first swap the doomed element wiht the tail\n",
     "        del self.x[self.last]  # Now remove it and clean up the mess. (Isn't it strange that del isn't a method?)\n",
     "        self.last -= 1\n",
-    "        self.swimdown(1)       # restore tree integrity (as now we have a small element on top)\n",
+    "        self._sink(1)       # restore tree integrity (as now we have a small element on top)\n",
     "        return out\n",
     "    \n",
-    "    def swimdown(self,i):\n",
+    "    def _sink(self,i):\n",
     "        while i*2 <= self.last:\n",
     "            j = i*2                                       # First consider left kid.\n",
     "            if (j<self.last) and (self.x[j]<self.x[j+1]): # If this node has 2 children, and left < right,\n",
@@ -85,7 +85,7 @@
     "            self.swap(i,j) # Current node is smaller than its largest kid, so sink it\n",
     "            i = j\n",
     "        \n",
-    "    def swimup(self,i):\n",
+    "    def _swim(self,i):\n",
     "        while i>1 and self.x[i//2]<self.x[i]: # While parent exist, and it's smaller than you, ascend.\n",
     "            self.swap(i//2,i)\n",
     "            i //= 2\n",
@@ -103,14 +103,14 @@
     "        \n",
     "a = pq(list('toxic carrot'))\n",
     "print(a)\n",
-    "a.insert('d')\n",
+    "a.add('d')\n",
     "print(a)\n",
     "print(a.pop(4))\n",
     "print(a)\n",
     "print(a.pop(4))\n",
     "print(a)\n",
     "a.visualize()\n",
-    "a.insert('lazy parrots are spherical')\n",
+    "a.feed('lazy parrots are spherical')\n",
     "print(a)\n",
     "print(a.pop(9))\n",
     "print(a)\n",
