--- a/classic/priority_queue.ipynb
+++ b/classic/priority_queue.ipynb
@@ -10,30 +10,112 @@
     "\n",
     "I will be implementing it so that high priotity = later letters (z has higher priority over a) as that's what textbooks seem to do in most cases. In this case the parent node is always larger (later in the alphabet) than its children.\n",
     "\n",
-    "The 0th (aka first for normal people) element is kept empty, which seems stupid until you realize that this way the children of element i lie exactly at 2i and 2i+1."
+    "The 0th (aka first for normal people) element is kept empty, which seems stupid until you realize that this way the children of element i lie exactly at 2i and 2i+1.\n",
+    "\n",
+    "Below are two versions (both for MAX priority queue).\n",
+    "* first a minimalistic (clean) version,\n",
+    "* then annotated version."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 'x', 't', 't', 'r', 'r', 'c', 'a', 'i', 'o', 'c', 'o']\n"
+      "[0, 5, 4, 2, 3, 1]\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "None\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Clean version\n",
+    "\n",
+    "class pq():\n",
+    "    \"\"\"Max priority queue.\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.x = [0]\n",
+    "        self.last = 0\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.x)\n",
+    "    \n",
+    "    def feed(self,a):\n",
+    "        \"\"\"Feed a list or a string.\"\"\"\n",
+    "        for i in a: self.add(i)\n",
+    "    \n",
+    "    def add(self,a):\n",
+    "        self.x.append(a)\n",
+    "        self.last += 1\n",
+    "        self._swim(self.last)\n",
+    "    \n",
+    "    def swap(self,i,j):\n",
+    "        (self.x[i] , self.x[j]) = (self.x[j] , self.x[i])\n",
+    "        \n",
+    "    def pop(self,n=1):\n",
+    "        if self.last==0: return None\n",
+    "        out = self.x[1]\n",
+    "        self.swap(1,self.last)\n",
+    "        self.x.pop(self.last)\n",
+    "        self.last -= 1\n",
+    "        self._sink(1)\n",
+    "        return out\n",
+    "    \n",
+    "    def _sink(self,i):\n",
+    "        while i*2 <= self.last:\n",
+    "            j = i*2\n",
+    "            if (j<self.last) and (self.x[j]<self.x[j+1]):\n",
+    "                j += 1\n",
+    "            if (self.x[j]<=self.x[i]): break\n",
+    "            self.swap(i,j)\n",
+    "            i = j\n",
+    "        \n",
+    "    def _swim(self,i):\n",
+    "        while i>1 and self.x[i//2]<self.x[i]:\n",
+    "            self.swap(i//2,i)\n",
+    "            i //= 2\n",
+    "            \n",
+    "        \n",
+    "q = pq()\n",
+    "q.feed([3,5,2,4,1])\n",
+    "print(q)\n",
+    "for i in range(6):\n",
+    "    print(q.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'pq' object has no attribute 'insert'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-6432a774d6d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'toxic carrot'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'd'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'pq' object has no attribute 'insert'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 'x', 'r', 't', 'o', 'r', 't', 'c', 'a', 'i', 'c', 'o', ' ']\n",
+      "[0, 'x', 'r', 't', 'o', 'r', 't', 'c', 'a', 'i', 'c', 'o', ' ', 'd']\n",
+      "xttr\n",
+      "[0, 'r', 'o', 'd', 'i', 'o', ' ', 'c', 'a', 'c']\n",
+      "rooi\n",
+      "[0, 'd', 'c', ' ', 'a', 'c']\n",
+      "d\n",
+      "|c\n",
+      "||a\n",
+      "||c\n",
+      "| \n",
+      "[0, 'z', 'y', 'r', 't', 's', 'r', 'r', 's', 'c', 'p', 'r', 'h', 'p', 'i', 'o', 'a', 'l', ' ', 'a', ' ', 'e', ' ', 'c', ' ', 'd', 'a', 'e', 'a', 'c', 'a', 'l']\n",
+      "zytssrrrr\n",
+      "[0, 'p', 'l', 'p', 'l', 'e', 'h', 'o', 'c', 'c', 'e', 'c', ' ', 'a', 'i', 'd', 'a', 'a', ' ', 'a', ' ', 'a', ' ']\n",
+      "ppolliheedcccaaaaa    \n",
+      "[0]\n"
      ]
     }
    ],
@@ -42,11 +124,12 @@
     "\n",
     "class pq():\n",
     "    \"\"\"Max priority queue.\"\"\"\n",
-    "    def __init__(self, init=[]):\n",
+    "    def __init__(self, init=None):\n",
     "        self.x = [0]\n",
     "        self.last = 0\n",
-    "        for i in init:\n",
-    "            self.add(i)\n",
+    "        if init is not None:\n",
+    "            for i in init:\n",
+    "                self.add(i)\n",
     "        \n",
     "    def __str__(self):\n",
     "        #return ' '.join(str(self.x))\n",
@@ -80,6 +163,8 @@
     "            j = i*2                                       # First consider left kid.\n",
     "            if (j<self.last) and (self.x[j]<self.x[j+1]): # If this node has 2 children, and left < right,\n",
     "                j += 1                                    # ..switch to the right one (larger one)\n",
+    "                # Note that the logic above is \"Short-cirquit\": if j>=self.last, 2nd condition isn't checked,\n",
+    "                # and so no \"index out of bounds is happening\".\n",
     "            if (self.x[j]<=self.x[i]): # If current is larger than the largest kid: no need to go further\n",
     "                break\n",
     "            self.swap(i,j) # Current node is smaller than its largest kid, so sink it\n",
